# BOTW-Save-Manager

./: .gitignore  README.md  package.json
BOTW Save Manager.app/Contents/: Info.plist
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup_handler.rs  constants.rs  dir_lister.rs  file_handler.rs  image_handler.rs  json_handler.rs  lib.rs  main.rs  save_handler.rs  thread_data.rs
src-tauri/wix/: main.wxs
src/css/: index.css
src/js/: backupHandler.js  index.js  jsonHandler.js  main.js  notifications.js  saveHandler.js
