[package]
name = "botw_save_manager"
version = "1.0.0-1"
description = "A manager for BOTW Saves"
authors = ["MADMAN-Modding"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "botw_save_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6.0.0"
once_cell = "1.20.3"

[package.metadata.wix]
name = "BOTW Save Manager"
banner = "icons/banner.png"
culture = "en-US"
dbg-build = false
dbg-name = false
no-build = false
path-guid = "BFD25009-65A4-4D1E-97F1-0030465D90D6"
product-icon = "icons/icon.ico"
upgrade-guid = "B36177BE-EA4D-44FB-B05C-EDDABDAA95CA"
dialog = "icons/dialog.png"